--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+  <div>
       <h1 id="cambridge-property">Cambridge Property Analysis</h1>
 
 <p>Created by Eric Englin</p>
@@ -21,12 +22,12 @@
 Data from Cambridge Open Data Portal at <a href = "https://data.cambridgema.gov/Assessing/Cambridge-Property-Database-FY16-FY20/eey2-rv59"> this location </a>.</p>
 
 <br><br>
-<h4>Cambridge Map of Lots Currently Eligible for ADUs:
+<h4>Cambridge Map of Lots Currently Eligible for ADUs (More Than 1,800 Gross Floor Area):
   <img src="./Docs/Eligible-Lots.png" alt="Amtrak Ridership" style="width:900px;height:600px;"/></h4>
 
 <h1>Zoning Code</h1>
 <p>For those interested, accessory apartment development and use is covered Section 4.22 in the Cambridge Zoning Code. The full amendment is available in the docs folder. Parts of the analysis comes from a memo from Barrett, and that is also included in the docs folder. </p>
-
+</div>
 
   </body>
 
