--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ Data from Cambridge Open Data Portal at <a href = "https://data.cambridgema.gov/
 
 <h1>Zoning Code</h1>
 <p>For those interested, accessory apartment development and use is covered Section 4.22 in the Cambridge Zoning Code. The full amendment is available in the docs folder. Parts of the analysis comes from a memo from Barrett, and that is also included in the docs folder. </p>
+
+
+<h1>Github Repo</h1>
+<p>Repo is available at <a href= "https://github.com/ericenglin/cambridge-property-analysis">this location.</a>
 </div>
 
   </body>
